--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://hiees-u.github.io/block-platform",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build --hash-algorithm=sha256",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
