--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "classnames": "^2.5.1",
+    "lucide-react": "^0.536.0",
     "path": "^0.12.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
